// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  class="sun-container"
>
  <div
    class="sun-container__block sun-container__block--sun"
  >
    <h3>
      Нажми на солнце
    </h3>
     
    <div
      class="sun-container__img"
    />
  </div>
   
  <div
    class="sun-container__block"
  />
</div>
`;

exports[`12.c1 TheSun 12.c1.3 click on the sun once 1`] = `
<div
  class="sun-container"
>
  <div
    class="sun-container__block sun-container__block--sun"
  >
    <h3>
      Нажми на солнце
    </h3>
     
    <div
      class="sun-container__img"
    >
      <img
        class="sun-container__the-sun"
        src="/Lessons/12.%20Vue.%20Properties.%20Refs.%20Modal/Tasks/Task 1. SizeOfSun/assets/sun.svg"
        style="width: 428px;"
      />
    </div>
  </div>
   
  <div
    class="sun-container__block"
  >
    <h3>
      Год:
    </h3>
     
    <span>
      
              502021
          
    </span>
     
    <h3>
      Диаметр солнца:
    </h3>
     
    <span>
      
              1323065 км
          
    </span>
  </div>
</div>
`;

exports[`12.c1 TheSun 12.c1.4 click on the two more times 1`] = `
<div
  class="sun-container"
>
  <div
    class="sun-container__block sun-container__block--sun"
  >
    <h3>
      Нажми на солнце
    </h3>
     
    <div
      class="sun-container__img"
    >
      <img
        class="sun-container__the-sun"
        src="/Lessons/12.%20Vue.%20Properties.%20Refs.%20Modal/Tasks/Task 1. SizeOfSun/assets/sun.svg"
        style="width: 387px;"
      />
    </div>
  </div>
   
  <div
    class="sun-container__block"
  >
    <h3>
      Год:
    </h3>
     
    <span>
      
              1502021
          
    </span>
     
    <h3>
      Диаметр солнца:
    </h3>
     
    <span>
      
              1194066 км
          
    </span>
  </div>
</div>
`;

exports[`12.c1 TheSun 12.c1.5 click on the sun one more time 1`] = `
<div
  class="sun-container"
>
  <div
    class="sun-container__block sun-container__block--sun"
  >
    <h3>
      Нажми на солнце
    </h3>
     
    <div
      class="sun-container__img"
    >
      <img
        class="sun-container__the-sun"
        src="/Lessons/12.%20Vue.%20Properties.%20Refs.%20Modal/Tasks/Task 1. SizeOfSun/assets/sun.svg"
        style="width: 368px;"
      />
    </div>
  </div>
   
  <div
    class="sun-container__block"
  >
    <h3>
      Год:
    </h3>
     
    <span>
      
              2002021
          
    </span>
     
    <h3>
      Диаметр солнца:
    </h3>
     
    <span>
      
              1134363 км
          
    </span>
  </div>
</div>
`;
